--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="BIENVENIDO"
+        android:text="@string/bienvenido"
         android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,7 +26,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="Nombre"
+        android:hint="@string/nombre"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,7 +39,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="Consto"
+        android:hint="@string/consto"
         android:inputType="number"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="PVP"
+        android:hint="@string/pvp"
         android:inputType="number"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,7 +66,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="Ingredientes"
+        android:hint="@string/ingrediente"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,7 +79,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="Ingredientes"
+        android:hint="@string/ingredientes"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -102,20 +102,20 @@
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_marginEnd="10dp"
-            android:text="Crear" />
+            android:text="@string/crear" />
 
         <Button
             android:id="@+id/btn_modificar"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_marginEnd="10dp"
-            android:text="Modificar" />
+            android:text="@string/modificar" />
 
         <Button
             android:id="@+id/btn_Eliminar"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:text="Eliminar" />
+            android:text="@string/eliminar" />
     </LinearLayout>
 
     <ListView
